# Soil-Shazam-Data-Collector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: pipeline.yaml  prompts.yaml  queries.yaml
src/: __init__.py  cli.py
src/clustering/: __init__.py  review.py
src/dedup/: __init__.py  deduplicator.py
src/downloader/: __init__.py  base.py  bing.py  flickr.py  google.py
src/evaluation/: __init__.py  metrics.py  report.py  sampler.py
src/export/: __init__.py  dataset.py
src/filtering/: __init__.py  clip_filter.py  overlay_filter.py  resolution.py
src/labeling/: __init__.py  clip_labeler.py
src/soil_collector/: cli.py
src/soil_collector/dedup/: deduplicator.py
src/soil_collector/downloader/: bing.py  duckduckgo.py  flickr.py  google.py
src/soil_collector/filtering/: clip_filter.py  overlay_filter.py  resolution.py  watermark.py
src/soil_collector/labeling/: clip_labeler.py
src/soil_collector/utils/: clip_model.py  image_utils.py  logging.py
src/soil_collector/verification/: sampler.py
src/utils/: __init__.py  image_utils.py  logging.py  pipeline_manifest.py
src/webapp/: app.py  helpers.py  stats.py
src/webapp/static/: app.js  style.css
src/webapp/templates/: annotate.html  base.html  browser.html  cluster.html  dashboard.html  evaluation.html
